# OSAI

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
asis/: __main__.py  asistant.py
asis/assistant/: asistant.py  memory.py
asis/commands/: new.py
asis/models/: model.py  modellist.py  opens.py  uploadmodel.py
asis/models/opensmodels/: Mistral-7B-Instruct-v0.2.py  __init__.py  gemma-7b.py
asisai.egg-info/: PKG-INFO  SOURCES.txt
