[metadata]
name = asisai
version = 0.1.1-alpha.1
author = JUAN PABLO
author_email = jpablogonzalezrod@gmail.co
description = Artificial Intelligence Standard Software, Open source framework for AI\nWe believe in open source AI to democratize technology, provide opportunities and development,with established standards and rules, creating a transparent and competitive world for the benefit of all.\nAsis is a set of standards,rules and framework for the deployment of an ecosystem of AI, based in "Personal AI", Concept analogous to personal computing and how it revolutionized the history of humanity.

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juanpablo91/Asi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: 
    Operating System :: OS Independent

[options]
python_requires = >=3.6
py_modules =
    div_mod

[options.entry_points]
console_scripts =
    asis = ASIS.__main__:cli